# rust-actix-sea-orm-template

./: Cargo.toml  docker-compose.yml
src/: main.rs
src/handlers/: mod.rs  root.rs  users.rs
src/models/: mod.rs
src/models/entities/: users.rs
src/models/migrator/: m20241009_000001_create_users_table.rs  mod.rs
src/schemas/: users.rs
src/service/: users.rs
src/utils/: mod.rs  password.rs
