[package]
name = "full_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
utoipa = { version = "*", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "*", features = ["actix-web"] }
utoipa-redoc = { version = "*", features = ["actix-web"] }
utoipa-rapidoc = { version = "*", features = ["actix-web"] }
utoipa-scalar = { version = "*", features = ["actix-web"] }
tokio = { version = "*" }
futures = { version = "0.3.*" }
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros", "chrono" ] }
sea-orm-migration = { version = "^0.12.0" }
serde = { version = "*" }
serde_json = { version = "*" }
env_logger = { version = "*" }
log = { version = "*" }
chrono = { version = "*" }
datetime = { version = "*" }
argon2 = { version = "*" } 
tracing = { version = "*" }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",               
    "fast-rng",          
    "macro-diagnostics",
]